completed most of css and  order menu

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
       <section class="menu">
         <div class="menu-cards"></div>
       </section>
-      <section class="order"></section>
+      <section class="order">
+        <h2>Your order</h2>
+        <div class="items"></div>
+        <div class="total"></div>
+        <button class="submit-btn">Complete Order</button>
+      </section>
     </div>
   </body>
 </html>
