css for modal is complete

--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         <div class="total"></div>
         <button class="submit-btn">Complete Order</button>
       </section>
+      <section class="modal">
+        <div class="modal-container">
+          <form action="" class="form">
+            <label for="">Enter Order Details</label>
+            <div class="inputs">
+              <input type="text" placeholder="Enter your name" />
+              <input type="text" placeholder="Enter card number" />
+              <input type="text" placeholder="Enter CVV" />
+            </div>
+            <button type="submit" class="submit">Pay</button>
+          </form>
+        </div>
+      </section>
     </div>
   </body>
 </html>
